# worldTravelASI-Splatcrafter

./: .gitignore  CMakeLists.txt  README.md
.devcontainer/: Dockerfile  README.md  devcontainer.json  post-create.sh
.devcontainer/claude/skills/api-contract-review/: SKILL.md
.devcontainer/claude/skills/changelog-generator/: SKILL.md
.devcontainer/claude/skills/concurrency-review/: SKILL.md
.devcontainer/claude/skills/design-patterns/: SKILL.md
.devcontainer/claude/skills/emil-design-eng/: SKILL.md
.devcontainer/claude/skills/git-commit/: SKILL.md
.devcontainer/claude/skills/issue-triage/: SKILL.md
.devcontainer/claude/skills/logging-patterns/: SKILL.md
.devcontainer/claude/skills/performance-smell-detection/: SKILL.md
.devcontainer/claude/skills/security-audit/: SKILL.md
.devcontainer/wtasi-toolchain-files/: minhook-CMakeLists.txt
WorldTravel/src/: AmbientZone.h  Blips.h  CMakeLists.txt  Entrances.cpp  Entrances.h  GameVersion.h  HelpText.h  Helpers.h  Hooking.cpp  Hooking.h  Ipl.h  IplGroup.cpp  Level.cpp  Level.h  LevelSwitch.cpp  LevelSwitch.h  Menu.h  Minimap.h  MpMap.h  PathNodeState.h  PayNSpray.h  PlayerLocation.h  PlayerObjects.h  RadioStation.h  Respawn.cpp  Respawn.h  RespawnBlock.h  RespawnBlockToggle.h  RestrictedAreaClearance.h  RestrictedAreas.h  Scenario.h  Settings.h  Shops.h  WaterState.h  WeatherTypes.h  Zone.h  ZonedModel.h  dllmain.cpp
WorldTravelPatches/src/: CMakeLists.txt  CWaterData.cpp  GroupMap.cpp  Hooking.Patterns.cpp  Hooking.Patterns.h  Hooking.cpp  Hooking.h  Paths.cpp  Settings.cpp  Settings.h  Water.cpp  dllmain.cpp
cmake/: strip-mojito-ltcg.sh  toolchain-clang-cl-xwin.cmake  toolchain-mingw-w64-x86_64.cmake
